k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: atlas.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-portal
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orion-api
                port:
                  number: 8000
